almost finish with snake game

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="score-and-button">
             <div class="score">
                 <h2>Previous Score: <span id='prevScore'></span></h2>
-                <h2>Hi Score: <span id='prevScore'></span></h2>
+                <h2>Hi Score: <span id='hiScore'></span></h2>
             </div>
             <h2 id="score">0</h2>
             <button class="game-btn btn" id="gameBtn">start game</button>
